feat: Implement SEP-1 stellar.toml fetching and parsing (#217)
Implements SEP-1 (stellar.toml) to fetch and parse anchor metadata from stellar.toml files, enriching anchor listings with organization information, logos, and supported currencies.

Backend Implementation:
- StellarTomlClient service for fetching and parsing stellar.toml files
- HTTPS with HTTP fallback for stellar.toml resolution
- Deterministic TOML parsing using toml crate
- Redis-based caching (24h success, 1h failure)
- Background refresh capability for popular anchors
- Comprehensive SSRF protection (domain validation, no IPs/localhost)
- Request timeouts (10s) and size limits (1MB)
- Network passphrase validation

Enhanced Models:
- AnchorMetadata struct with organization info, logo, currencies
- AnchorWithMetadata for extended anchor type
- Backward compatible API responses

Updated Anchor API:
- Fetches stellar.toml metadata for anchors with home_domain
- Includes metadata in anchor list responses
- Graceful degradation on fetch failures
- Non-blocking metadata enrichment

Comprehensive Tests:
- Domain validation tests (SSRF protection)
- TOML parsing tests (basic, currencies, principals)
- Error handling and edge cases
- Security validation tests

Frontend Implementation:
- TypeScript types for anchor metadata
- AnchorCard component with metadata display
- Logo rendering with fallback
- Organization information display
- Supported currencies badges
- Contact links (website, support email)
- Safe null handling for optional fields

Security Features:
- SSRF protection with strict domain validation
- No IP addresses, localhost, or private networks allowed
- Request timeouts and size limits
- Protocol restrictions (HTTP/HTTPS only)
- Content validation (UTF-8, valid TOML)
- Network passphrase validation

Caching Strategy:
- Redis-based caching with key pattern: stellar_toml:{domain}
- 24-hour TTL for successful fetches
- 1-hour TTL for failures (prevents retry storms)
- Background refresh for popu

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -32,6 +32,8 @@ stellar-xdr = { version = "21.0.0", features = ["std", "curr"] }
 stellar-base = "0.1"
 base64 = "0.22"
 jsonwebtoken = "9.0"
+toml = "0.8"
+url = "2.5"
 utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
 utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
 async-trait = "0.1"
